--- a/pastelka/scss/_productCard.scss
+++ b/pastelka/scss/_productCard.scss
@@ -7,7 +7,7 @@
   }
 
   .productCardTitle{
-    padding-left: em(15px, 36px);
+    padding-left: 0;
   }
 }
 
@@ -32,22 +32,7 @@
 }
 
 .productAdvantagesList{
-  @media (max-width: 768px) {
-    display: none;
-  }
-}
 
-.productAdvantagesIcon{
-  [class^="icon-"]{
-    font-size: em(60px, 16px);
-    color: $purple1;
-  }
-  .icon-discount{
-    position: relative;
-    [class^="path"]{
-      color: $purple1;
-    }
-  }
 }
 
 .productAdvantagesItem {
@@ -60,10 +45,42 @@
   &:first-child{
     margin-left: 0;
   }
+  @media (max-width: 768px) {
+    margin: 0 0 em(10px, 16px) 0;
+    width: 100%;
+  }
 }
 
-.productAdvantagesText{
-  font-size: em(12px, 16px);
+.productAdvantagesLink{
+  .productAdvantagesIcon{
+    [class^="icon-"]{
+      font-size: em(60px, 16px);
+      color: $purple1;
+    }
+    @media (max-width: 768px) {
+      font-size: em(30px, 60px);
+    }
+  }
+  .productAdvantagesText{
+    color: $gray1;
+    font-size: em(12px, 16px);
+    @media (max-width: 768px) {
+      font-size: em(16px, 16px);
+    }
+  }
+
+  &:hover{
+    .productAdvantagesIcon {
+      [class^="icon-"] {
+        opacity: .7;
+      }
+    }
+    .productAdvantagesText {
+      @media (max-width: 768px) {
+        text-decoration: underline;
+      }
+    }
+  }
 }
 
 .productCardRowLink{
