--- a/pastelka/scss/_checkout.scss
+++ b/pastelka/scss/_checkout.scss
@@ -168,7 +168,8 @@
 }
 
 .checkoutCounter{
-  width: 45px;
+  width: 60px;
+  padding: 10px;
   display: inline-block;
   text-align: center;
   border: 1px solid $gray6;
